Fixed overflow in artist grid

--- a/src/components/artists/artistList.module.scss
+++ b/src/components/artists/artistList.module.scss
@@ -14,8 +14,8 @@
 }
 .grid {
     width: 100%;
-    max-width: 390px;
     display: grid;
+    max-width: 500px;
     grid-template-columns: repeat(3, 1fr);
     column-gap: 15px;
     row-gap: 15px;
@@ -24,10 +24,6 @@
     box-shadow: 0 0 20px #16161696;
     border-radius: 15px;
 
-    @media screen and (max-width: 350px) {
-        grid-template-columns: repeat(2, 1fr);
-    }
-
     .card {
         display: flex;
         flex-direction: column;
@@ -35,17 +31,12 @@
         align-items: center;
 
         .artistImage {
-            width: 110px;
-            height: 110px;
+            width: 100%;
+            height: 100%;
             border-radius: 100%;
             overflow: hidden;
             position: relative;
             aspect-ratio: 1/1;
-
-            @media screen and (max-width: 390px) {
-                width: 125px;
-                height: 125px;
-            }
 
             img {
                 object-fit: cover;
@@ -54,8 +45,7 @@
         }
         p {
             text-align: center;
-
-            // @media screen and (max-width: );
+            font-size: 12px;
         }
     }
 }
